--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Wrapper for upbit API",
   "main": "index.js",
   "scripts": {
+    "sbin": "ts-node",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,9 +19,15 @@
   },
   "homepage": "https://github.com/imwh0im/upbitjs#readme",
   "dependencies": {
-    "axios": "^0.24.0"
+    "axios": "^0.24.0",
+    "jsonwebtoken": "^8.5.1",
+    "query-string": "^7.1.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.6",
+    "@types/node": "^17.0.8",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
     "eslint": "^8.6.0",
@@ -27,6 +35,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   }
 }
