chore: upbit api

--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.1",
   "description": "Wrapper for upbit API",
   "main": "index.js",
+  "types": "/src/index.d.ts",
   "scripts": {
     "sbin": "ts-node",
-    "build": "tsc",
+    "build": "rm -rf ./dist && tsc -p tsconfig.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
