--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Wrapper for upbit API",
   "main": "index.js",
-  "types": "/src/index.d.ts",
+  "types": "index.d.ts",
   "scripts": {
     "sbin": "ts-node",
     "build": "rm -rf ./dist && tsc -p tsconfig.json",
