--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "upbitjs",
-  "version": "0.0.0-development",
+  "name": "node-upbit-api",
+  "version": "1.0.0",
   "description": "Wrapper for upbit API",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -15,14 +15,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/imwh0im/upbitjs.git"
+    "url": "https://github.com/imwh0im/node-upbit-api.git"
   },
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/imwh0im/upbitjs/issues"
+    "url": "https://github.com/imwh0im/node-upbit-api/issues"
   },
-  "homepage": "https://github.com/imwh0im/upbitjs#readme",
+  "homepage": "https://github.com/imwh0im/node-upbit-api#readme",
   "keywords": [
     "bitcoin",
     "bitcoin api",
