fix(npm-ignore): ignore docs directory

--- a/.npmignore
+++ b/.npmignore
@@ -1,9 +1,10 @@
 src/
+docs/
+.github/
 tsconfig.json
 release.config.js
 .eslintignore
 .eslintrc.js
 package-lock.json
-.github/
 .prettierignore
 .prettierrc.js
